--- a/css/theme.css
+++ b/css/theme.css
@@ -27,20 +27,27 @@ body {
 
 
 .world {
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
+	background-color: #6FC6CF;
+    background-image: url("../images/background.png");
+    background-size: auto 100%;
+    height: 100%;
+    overflow: hidden;
+    width: 100%;
 }
 
 .bird {
 	width: 50px;
 	height: 50px;
 	border-radius: 50%;
-	background-color: red;
+	background-color: transparent;
 	position: absolute;
 	bottom: 25%;
 	left: 25%;
 	z-index: 1000;
+	background-image: url('../images/bird-start.png');
+	background-position: center center;
+	background-size: 100% auto;
+	background-repeat: no-repeat;
 }
 
 .pipe-wrap {
@@ -53,17 +60,22 @@ body {
 
 .pipe {
 	position: absolute;
-	background-color: green;
+	background-color: transparent;
 	height: 30%;
 	width: 100%;
 }
 
 .pipe.top {
 	top: 0px;
+	background-image: url("../images/pipe.png");
+	background-size: 100% auto;
+	background-position: bottom center;
 }
 
 .pipe.bottom {
 	bottom: 0px;
+	background-image: url("../images/pipe.png");
+    background-size: 100% auto;
 }
 
 /********************************************************
