--- a/css/theme.css
+++ b/css/theme.css
@@ -13,6 +13,34 @@
 		MAIN CONTENT STYLES
 ********************************************************/
 
+@font-face {
+    font-family: '04b_19regular';
+    src: url('../fonts/04b_19__-webfont.eot');
+    src: url('../fonts/04b_19__-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/04b_19__-webfont.woff') format('woff'),
+         url('../fonts/04b_19__-webfont.ttf') format('truetype'),
+         url('../fonts/04b_19__-webfont.svg#04b_19regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+.hud {
+	position: absolute;
+	width: 100%;
+	text-align: center;
+	z-index: 2000;
+	font-size: 2em;
+}
+
+.hud h2 { font-size: 40px; color: #fab907; text-shadow: 1px 1px 10px #554351; }
+.hud h1 { font-size: 60px; color: #fab907; text-shadow: 1px 1px 10px #554351; }
+
+.hud .game-over {
+	visibility: hidden;
+	display: none;
+}
+
 html {
 	width: 100%;
 	height: 100%;
@@ -25,6 +53,9 @@ body {
 	overflow: hidden;
 }
 
+body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+	font-family: '04b_19regular';
+}
 
 .world {
 	background-color: #6FC6CF;
